# numa-pmr

./: .clangd  .gitignore  CMakeLists.txt  README.md  bench.json  compile_flags.txt  numa_arena.hpp  numa_aware_allocator.hpp  numa_aware_memory_resource.hpp  numa_memory_resourse.hpp  structure.md  virtual_memory.hpp
arena/: arena_policy.hpp  arena_stats.hpp  numa_arena.hpp
cmake/: remove_coverage_data.cmake
core/: allocation_router.hpp  numa_manager.hpp  numa_topology.hpp
graphic/: allocation.md  deallocation.md  layers.md  slab_memory_layout.md
large/: large_object_allocator.hpp  virtual_memory.hpp
memory/: block_header.hpp  pointer_utils.hpp
platform/: cpu_affinity.hpp  linux_numa.hpp
sanitizers/: README.md  common.sh  install_tools.sh  run_all.sh  verify_allocator_sanitizers.sh  verify_allocator_tsan.sh  verify_static_analysis.sh
size_divide/: block.hpp  large_object_allocator.hpp  small_object_allocator.hpp
small/: size_class.hpp  slab.hpp  small_object_allocator.hpp  thread_cache.hpp
src/: arena_memory_resource.hpp  numa_allocator.cpp  numa_arena.cpp  numa_arena.hpp  numa_arena_memory_resource.hpp  numa_aware_memory_resource.hpp  numa_memory_resource.hpp  numa_simple_memory_resource.hpp  simple_numa_memory_resource.hpp  virtual_memory.hpp
src/arena_manager/: arena_manager.cpp  arena_manager.hpp
src/numa_arena/: numa_arena.cpp  numa_arena.hpp
src/numa_manager/: numa_manager.cpp  numa_manager.hpp
src/numa_topology/: numa_thread_pin_guard.cpp  numa_thread_pin_guard.hpp  numa_topology.cpp  numa_topology.hpp
src/size_divide/: block.hpp  large_object_allocator.cpp  large_object_allocator.hpp  small_object_allocator.cpp  small_object_allocator.hpp
src/size_divide/large_object/: large_object_allocator.cpp  large_object_allocator.hpp
src/size_divide/small_object/: small_object_allocator.cpp  small_object_allocator.hpp
src/thread_local/: thread_local_cache.cpp  thread_local_cache.hpp
src/virtual_memory/: virtual_memory.cpp  virtual_memory.hpp
tests/: CMakeLists.txt  README.md
tests/multi_node/: CMakeLists.txt
tests/multi_node/benchmark/: README.md  multialloc_benchmark.cpp
tests/multi_node/common/: test_utils.hpp
tests/multi_node/integration/: numa_arena_memory_resource.cpp  numa_memory_resource.cpp  numa_simple_memory_resource.cpp
tests/multi_node/unit/: arena.cpp  arena_manager.cpp  numa_manager.cpp  pmr_resources.cpp  thread_cache.cpp  virtual_memory.cpp
tests/multi_node/unit/size_divide/: block.cpp  large_object.cpp  small_object.cpp
tests/one_node/: CMakeLists.txt
tests/one_node/benchmark/: bench_allocators.cpp  compare_benchmark_runs.py
tests/one_node/common/: test_utils.hpp
tests/one_node/integration/: test_integration_smoke.cpp
tests/one_node/unit/: test_unit_smoke.cpp
tools/: allocator_playground.cpp
